# Integrated-Knowledge-Base

./: .gitignore  Dockerfile  Dockerfile.backend  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agent/: graph.py  orchestrator.py  state.py  trace.py
app/api/: chunk_review.py  compile.py  config.py  eval.py  export.py  health.py  ingest.py  knowledge.py  mcp.py  monitor.py  nl2sql.py  query.py  review.py  wiki.py
app/clients/: es_client.py  llm_client.py  milvus_client.py  minio_client.py
app/compiler/: concepts.py  delta.py  deps.py  llm_utils.py  orphan.py  pages.py  pipeline.py  prompt_budget.py  prompts.py  provenance.py  resolver.py  wiki_cards.py  wiki_md.py
app/conf/: app_config.py
app/core/: database.py  log.py
app/eval/: __init__.py  citation_eval.py  evidence_eval.py  fixtures.py  health_eval.py  runner.py  (+2 more)
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.mjs  vite.config.ts
samples/: fuel_filter_replacement.md  landing_gear.md
scripts/: smoke_test.py  spa_static_server.py
tests/: mini_golden_set.py  test_auto_compile_and_chunk_approval.py  test_cleaning.py  test_context_builder.py  test_correctness_enhancements.py  test_final_architecture_paths.py  test_ingest_status_and_review_defaults.py  test_knowledge_visibility.py  test_mcp_stdio_server.py  test_milvus_count_fallback.py  test_nl2sql_contract.py  test_query_orchestrator.py  test_rerank_and_cleanup.py  test_retrieval_eval.py  test_review_gate.py  test_review_sync.py  test_wiki_pg_architecture.py
(+101 files in other folders)
